--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                             70% of population suffers from bad posture, responsible for back pain, impaired lungs function, decline in focus, etc. Test your posture with stance in a minute. Know whats wrong and workout with us to achieve your best possible pose.</p>
                     </div>
-                    <div class="space-40"></div>
+                    <div class="section-padding-top-2"></div>
                     <a href="#" class="bttn-white wow fadeInUp" data-wow-delay="0.8s"><i class="lnr lnr-download"></i>Test now</a>
                 </div>
             </div>
