--- a/for_organisation.html
+++ b/for_organisation.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 </nav>
-  <section class="section-padding">
+  <section class=" gallery-area section-padding">
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-sm-6">
