--- a/index.html
+++ b/index.html
@@ -65,12 +65,10 @@
         <div>
             <div class="home_page row">
                 <div class="home_page_cnt_2 col-xl-6">
-                    <a href="https://www.youtube.com/embed/rSIFKEgRO_w" class="popup video-button">
-                        <figure class="mobile-image wow fadeInUp" data-wow-delay="0.2s">
-                            <img src="images/header-mobile.png" alt="">
-                        </figure>
-                    </a>
-                    
+                    <iframe width="500" height="300" src="https://www.youtube.com/embed/IdejM6wCkxA" 
+                        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen>
+                    </iframe>
                 </div>
                 <div class="home_page_cnt_1 col-xl-6">
                     <div class="space-80 hidden-xs"></div>
