--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
         <div>
             <div class="home_page row">
                 <div class="home_page_cnt_2 col-xl-6">
-                    <iframe width="500" height="300" src="https://www.youtube.com/embed/IdejM6wCkxA" 
-                        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                        allowfullscreen>
-                    </iframe>
+                    <div class="iframe-container">
+                        <iframe src="https://www.youtube.com/embed/IdejM6wCkxA" 
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
+                        </iframe>
+                    </div>
                 </div>
                 <div class="home_page_cnt_1 col-xl-6">
                     <div class="space-80 hidden-xs"></div>
