--- a/for_organisation.html
+++ b/for_organisation.html
@@ -44,12 +44,12 @@
             <ul class="nav navbar-nav mainmenu">
                 <li class="active"><a href="#home_page">Home</a></li>
                 <li><a href="for_organisation.html">For organisations</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="#contact_page">Contacts</a></li>
+                <!-- <li><a href="blog.html">Blog</a></li>
+                <li><a href="#contact_page">Contacts</a></li> -->
             </ul>
-            <div class="right-button hidden-xs">
+            <!-- <div class="right-button hidden-xs">
                 <a href="#">Sign Up</a>
-            </div>
+            </div> -->
         </div>
     </div>
 </nav>
