--- a/for_organisation.html
+++ b/for_organisation.html
@@ -38,18 +38,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo"  width="100" height="40" ></a>
+            <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Logo"  width="100" height="40" ></a>
         </div>
         <div class="collapse navbar-collapse" id="primary_menu">
             <ul class="nav navbar-nav mainmenu">
-                <li class="active"><a href="#home_page">Home</a></li>
-                <li><a href="for_organisation.html">For organisations</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="for_organisation.html">For organisations</a></li>
                 <!-- <li><a href="blog.html">Blog</a></li>
                 <li><a href="#contact_page">Contacts</a></li> -->
             </ul>
-            <!-- <div class="right-button hidden-xs">
-                <a href="#">Sign Up</a>
-            </div> -->
         </div>
     </div>
 </nav>
@@ -73,7 +70,18 @@
               students to improve their health and learning capabilities. </p>
           </div>
           <div class="space-50"></div>
-          <a href="#" class="bttn-default wow fadeInUp" data-wow-delay="0.8s">Learn More</a>
+          <div class="signUpForm">
+            <form id="myForm3">
+                <div class="form-group">
+                <label>Email</label>
+                <input name="email_school" class="form-control" />
+                </div>
+                <br/>
+                <br/>
+            </form>
+            <!-- <button onclick="SubForm()">Submit</button> -->
+            <a href="#" onclick="SubForm3()" class="bttn-white wow fadeInUp" data-wow-delay="0.8s">Submit</a>
+        </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1">
           <div class="space-60 hidden visible-xs"></div>
@@ -104,7 +112,33 @@
         </div>
       </div>
     </div>
+    <div id="snackbar"></div>
   </section>
+  <script src="js/vendor/jquery-1.12.4.min.js"></script>
+  <script src="js/vendor/jquery-ui.js"></script>  
+  <script>
+    function SubForm3 (){
+        $.ajax({
+            url:'https://api.apispreadsheets.com/data/1473/',
+            type:'post',
+            data:$("#myForm3").serializeArray(),
+            success: function(){
+                var x = document.getElementById("snackbar");
+                x.className = "show";
+                x.innerHTML = "Submitted Successfully";
+                x.style.backgroundColor = "#90ee90";
+                setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
+            },
+            error: function(){
+                var x = document.getElementById("snackbar");
+                x.className = "show";
+                x.innerHTML = "There was an error. Please retry.";
+                x.style.backgroundColor = "#ff0033";
+                setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
+            }
+        });
+    }
+</script>
 </body>
 
 </html>
