--- a/for_organisation.html
+++ b/for_organisation.html
@@ -7,7 +7,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Title -->
-  <title>Appy App Landing Template.</title>
+  <title>Stance App Landing Page</title>
   <!-- Place favicon.ico in the root directory -->
   <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
   <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
@@ -38,7 +38,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Logo"  width="100" height="40" ></a>
+            <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Logo"></a>
         </div>
         <div class="collapse navbar-collapse" id="primary_menu">
             <ul class="nav navbar-nav mainmenu">
