--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo"  width="100" height="40" ></a>
+                <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo"></a>
             </div>
             <div class="collapse navbar-collapse" id="primary_menu">
                 <ul class="nav navbar-nav mainmenu">
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="home_page_cnt_1 col-xl-6">
-                    <div class="space-80 hidden-xs"></div>
+                    <!-- <div class="space-80 hidden-xs"></div> -->
                     <h1  class="wow fadeInUp" data-wow-delay="0.4s">Let our AI analyse and guide you
 
                         to a better posture.</h1>
