--- a/for_organisation.html
+++ b/for_organisation.html
@@ -73,8 +73,8 @@
           <div class="signUpForm">
             <form id="myForm3">
                 <div class="form-group">
-                <label>Email</label>
-                <input name="email_school" class="form-control" />
+                <label>Register for Beta</label>
+                <input name="email_school" class="form-control" placeholder="Enter your email address" />
                 </div>
                 <br/>
                 <br/>
