--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="home_page row">
                 <div class="home_page_cnt_2 col-xl-6">
                     <div class="iframe-container">
-                        <iframe src="https://www.youtube.com/embed/IdejM6wCkxA" 
+                        <iframe src="https://www.youtube.com/embed/rSIFKEgRO_w" 
                             frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
                         </iframe>
@@ -84,8 +84,8 @@
                     <div class="signUpForm">
                         <form id="myForm1">
                             <div class="form-group">
-                            <label>Email</label>
-                            <input name="email" class="form-control" />
+                            <label>Register for Beta</label>
+                            <input name="email" class="form-control" placeholder="Enter your email address"/>
                             </div>
                             <br/>
                             <br/>
@@ -270,8 +270,9 @@
                     <div class="signUpForm">
                         <form id="myForm2">
                             <div class="form-group">
-                            <label>Email</label>
-                            <input name="email" class="form-control" />
+                            <label>Register for Beta</label>
+                            <div class="space-20"></div>
+                            <input name="email" class="form-control" placeholder="Enter your email address" />
                             </div>
                             <br/>
                             <br/>
