add privacy policy

--- a/index.html
+++ b/index.html
@@ -285,7 +285,25 @@
         </div>
     </section>
     <!-- Gallery-Area-End -->
-    
+    <footer class="footer-area" id="contact_page">
+
+
+        <!-- Footer-Bootom -->
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-md-7">
+                        <div class="footer-menu">
+                            <ul>
+                                <li><a href="privacyPolicy.html">Privacy Policy</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Footer-Bootom-End -->
+    </footer>
     <!-- Footer-Area-End -->
     <div id="snackbar"></div>
  
