--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                             <div class="form-group">
                             <label>Register for Beta</label>
                             <div class="space-20"></div>
-                            <input name="email" class="form-control" placeholder="Enter your email address" autofocus />
+                            <input name="email" class="form-control" placeholder="Enter your email address" />
                             </div>
                             <br/>
                             <br/>
