--- a/for_organisation.html
+++ b/for_organisation.html
@@ -43,7 +43,7 @@
         <div class="collapse navbar-collapse" id="primary_menu">
             <ul class="nav navbar-nav mainmenu">
               <li><a href="index.html">Home</a></li>
-              <li class="active"><a href="for_organisation.html">For organisations</a></li>
+              <li class="active"><a href="for_organisation.html">For enterprises</a></li>
             </ul>
         </div>
     </div>
@@ -53,25 +53,22 @@
       <div class="row">
         <div class="col-xs-12 col-sm-6">
           <div class="page-title">
-            <h5 class="title wow fadeInUp" data-wow-delay="0.2s">Stance for Schools</h5>
+            <h5 class="title wow fadeInUp" data-wow-delay="0.2s">Stance for Educational Institutes</h5>
             <div class="space-10"></div>
-            <h3 class="dark-color wow fadeInUp" data-wow-delay="0.4s">Pay attention on posture of your students</h3>
+            <!-- <h3 class="dark-color wow fadeInUp" data-wow-delay="0.4s">Pay attention on posture of your students</h3> -->
           </div>
           <div class="space-20"></div>
           <div class="desc wow fadeInUp" data-wow-delay="0.6s">
-            <p>Did you know posture affects student’s ability to learn, bad posture is considered as one of the major
-              contributor of ADHD
-              (Attention deficit hyperactivity disorder) and causes trouble focusing.</br>
-              Increased sitting time, less physical activities, heavy school bags are few of the reasons why majority of
-              students suffer from bad posture
-              which can last for lifetime. As an educator (or parent) you should pay attention on posture of your
-              students to improve their health and learning capabilities. </p>
+            <p style="text-align: justify;">Body posture affects students' ability to learn. Bad posture is considered as one of the major contributors to ADHD (Attention deficit hyperactivity disorder) and causes trouble focusing.
+              Increased sitting time, less physical activities, heavy school bags are few of the reasons why a majority of students suffer from bad posture which can last for a lifetime.
+              We'll be more than happy to help educators in improving the health and learning capabilities of their students.
+               </p>
           </div>
           <div class="space-50"></div>
           <div class="signUpForm">
             <form id="myForm3">
                 <div class="form-group">
-                <label>Register for Beta</label>
+                <label>Request Demo</label>
                 <input name="email_school" class="form-control" placeholder="Enter your email address" />
                 </div>
                 <br/>
@@ -85,33 +82,94 @@
           <div class="space-60 hidden visible-xs"></div>
           <div class="service-box wow fadeInUp" data-wow-delay="0.2s">
             <div class="box-icon">
-              <i class="lnr lnr-clock"></i>
+              <i class="lnr lnr-book"></i>
             </div>
             <h4>Educating students</h4>
-            <p>Educating students about importance of proper posture and ergonomics.</p>
+            <p>Spreading awareness about the importance of proper posture and ergonomics.</p>
           </div>
           <div class="space-50"></div>
           <div class="service-box wow fadeInUp" data-wow-delay="0.2s">
             <div class="box-icon">
-              <i class="lnr lnr-laptop-phone"></i>
+              <i class="lnr lnr-calendar-full"></i>
             </div>
-            <h4>Evaluating posture</h4>
-            <p>Testing posture of student’s body to identify the problem and its severity.</p>
+            <h4>Weekly Task</h4>
+            <p>A student has to complete minimum sessions of workout weekly, if not, the class teacher and parents will be notified.</p>
           </div>
           <div class="space-50"></div>
           <div class="service-box wow fadeInUp" data-wow-delay="0.2s">
             <div class="box-icon">
-              <i class="lnr lnr-cog"></i>
+              <i class="lnr lnr-graduation-hat"></i>
             </div>
-            <h4>Weekly task</h4>
-            <p>A student has to complete minimum sessions of workout weekly, if not, the class teacher will be notified.
+            <h4>Competitive Leaderboards</h4>
+            <p>Students compete with their classmates on the basis of exercise scores.
             </p>
           </div>
         </div>
       </div>
     </div>
-    <div id="snackbar"></div>
+  <div id="snackbar"></div>
   </section>
+  <section class=" gallery-area section-padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-6">
+          <div class="page-title">
+            <h5 class="title wow fadeInUp" data-wow-delay="0.2s">Stance for Corporations</h5>
+            <div class="space-10"></div>
+            <!-- <h3 class="dark-color wow fadeInUp" data-wow-delay="0.4s">Pay attention on posture of your students</h3> -->
+          </div>
+          <div class="space-20"></div>
+          <div class="desc wow fadeInUp" data-wow-delay="0.6s">
+            <p style="text-align: justify;">Working with inappropriate body posture results in lack of focus and efficiency of the office workers, known as ADHD (Attention deficit hyperactivity disorder). Equip your modern desk warriors to combat 
+              slouching and neck pain during the increased sitting time, less physical activities.
+               </p>
+          </div>
+          <div class="space-50"></div>
+          <div class="signUpForm">
+            <form id="myForm4">
+                <div class="form-group">
+                <label>Request Demo</label>
+                <input name="email_corporate" class="form-control" placeholder="Enter your email address" />
+                </div>
+                <br/>
+                <br/>
+            </form>
+            <!-- <button onclick="SubForm()">Submit</button> -->
+            <a href="#" onclick="SubForm4()" class="bttn-white wow fadeInUp" data-wow-delay="0.8s">Submit</a>
+        </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1">
+          <div class="space-60 hidden visible-xs"></div>
+          <div class="service-box wow fadeInUp" data-wow-delay="0.2s">
+            <div class="box-icon">
+              <i class="lnr lnr-users"></i>
+            </div>
+            <!-- <h4>Educating students</h4> -->
+            <p>Fitness program in the pockets of your employees.</p>
+          </div>
+          <div class="space-50"></div>
+          <div class="service-box wow fadeInUp" data-wow-delay="0.2s">
+            <div class="box-icon">
+              <i class="lnr lnr-chart-bars"></i>
+            </div>
+            <!-- <h4>Weekly Task</h4> -->
+            <p>Posture correction and stretching in office-friendly exercises for all fitness levels.</p>
+          </div>
+          <div class="space-50"></div>
+          <div class="service-box wow fadeInUp" data-wow-delay="0.2s">
+            <div class="box-icon">
+              <i class="lnr lnr-briefcase"></i>
+            </div>
+            <!-- <h4>Competitive Leaderboards</h4> -->
+            <p>Fits perfectly into the workday, no sweating.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  <div id="snackbar"></div>
+  </section>
+
   <script src="js/vendor/jquery-1.12.4.min.js"></script>
   <script src="js/vendor/jquery-ui.js"></script>  
   <script>
@@ -120,6 +178,27 @@
             url:'https://api.apispreadsheets.com/data/1473/',
             type:'post',
             data:$("#myForm3").serializeArray(),
+            success: function(){
+                var x = document.getElementById("snackbar");
+                x.className = "show";
+                x.innerHTML = "Submitted Successfully";
+                x.style.backgroundColor = "#90ee90";
+                setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
+            },
+            error: function(){
+                var x = document.getElementById("snackbar");
+                x.className = "show";
+                x.innerHTML = "There was an error. Please retry.";
+                x.style.backgroundColor = "#ff0033";
+                setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
+            }
+        });
+    }
+    function SubForm4 (){
+        $.ajax({
+            url:'https://api.apispreadsheets.com/data/1473/',
+            type:'post',
+            data:$("#myForm4").serializeArray(),
             success: function(){
                 var x = document.getElementById("snackbar");
                 x.className = "show";
