--- a/index.html
+++ b/index.html
@@ -256,13 +256,13 @@
                 </div>
                 <div class="col-xs-12 col-sm-5 col-lg-3">
                     <div class="page-title">
-                        <h5 class="white-color title wow fadeInUp" data-wow-delay="0.2s">Screenshots</h5>
+                        <h4 class="white-color title wow fadeInUp" data-wow-delay="0.2s">Mobile App Screenshots</h4>
                         <div class="space-10"></div>
-                        <h3 class="white-color wow fadeInUp" data-wow-delay="0.4s">Our mobile app</h3>
+                        <!-- <h3 class="white-color wow fadeInUp" data-wow-delay="0.4s">Our mobile app</h3> -->
                     </div>
                     <div class="space-20"></div>
                     <div class="desc wow fadeInUp" data-wow-delay="0.6s">
-                        <p>Good posture means the body<br> is relaxed because the muscles <br> are not straining to stay upright.<br><br><b> Want to improve? We've got your back.</b> </p>
+                        <p>Good posture means the body<br> is relaxed because the muscles <br> are not straining to stay upright.<br><br> Want to improve? <b>We've got your back.</b> </p>
                     </div>
                     <div class="space-50"></div>
                     <div class="signUpForm" id="signupformdiv">
